--- a/package.json
+++ b/package.json
@@ -9,35 +9,35 @@
   "devDependencies": {
     "babel-core": "^6.26.0",
     "babel-eslint": "^8.2.1",
-    "babel-jest":"^22.2.2",
+    "babel-jest": "^22.2.2",
     "babel-loader": "^7.1.2",
     "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-preset-es2015": "^6.24.1",
-    "babel-preset-react":"^6.24.1",
-    "css-loader":"^0.28.9",
-    "enzyme":"^3.3.0",
-    "enzyme-adapter-react-16":"^1.1.1",
+    "babel-preset-react": "^6.24.1",
+    "css-loader": "^0.28.9",
+    "enzyme": "^3.3.0",
+    "enzyme-adapter-react-16": "^1.1.1",
     "eslint": "^4.17.0",
-    "eslint-config-airbnb":"^16.1.0",
-    "eslint-config-import": "^2.8.0",
-    "eslint-plugin-react":"^7.6.1",
-    "eslint-plugin-jsx-a11y":"^6.0.3",
-    "jest":"^22.2.2",
-    "json-loader":"^0.5.7",
-    "open-browser-webpack-plugin":"^0.0.5",
-    "react-addons-test-utils":"^15.6.2",
-    "sinon":"^4.3.0",
-    "style-loader":"^0.20.1",
+    "eslint-config-airbnb": "^16.1.0",
+    "eslint-plugin-import": "^2.8.0",
+    "eslint-plugin-jsx-a11y": "^6.0.3",
+    "eslint-plugin-react": "^7.6.1",
+    "jest": "^22.2.2",
+    "json-loader": "^0.5.7",
+    "open-browser-webpack-plugin": "^0.0.5",
+    "react-addons-test-utils": "^15.6.2",
+    "sinon": "^4.3.0",
+    "style-loader": "^0.20.1",
     "webpack": "^3.11.0",
-    "webpack-dev-server":"^2.11.1"
+    "webpack-dev-server": "^2.11.1"
   },
   "dependencies": {
-    "lodash":"^4.17.5",
-    "prop-types":"^15.6.0",
-    "react":"^16.2.0",
-    "react-dom":"^16.2.0",
-    "react-redux":"^5.0.6",
-    "redux":"^3.7.2",
-    "redux-thunk":"^2.2.0"
+    "lodash": "^4.17.5",
+    "prop-types": "^15.6.0",
+    "react": "^16.2.0",
+    "react-dom": "^16.2.0",
+    "react-redux": "^5.0.6",
+    "redux": "^3.7.2",
+    "redux-thunk": "^2.2.0"
   }
 }
