--- a/package.json
+++ b/package.json
@@ -32,11 +32,13 @@
     "webpack-dev-server": "^2.11.1"
   },
   "dependencies": {
+    "express": "^4.16.2",
     "lodash": "^4.17.5",
     "prop-types": "^15.6.0",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-redux": "^5.0.6",
+    "redis": "^2.8.0",
     "redux": "^3.7.2",
     "redux-thunk": "^2.2.0"
   }
