Implement front-end

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -2,6 +2,7 @@
   "env": {
     "es6": true,
     "node": true,
+    "browser": true,
     "mocha": true,
     "jest": true
   },
@@ -23,7 +24,14 @@
       "error",
       "always"
     ],
-    "no-console": 0
+    "no-console": 0,
+    "jsx-a11y/label-has-for": [ 1, {
+      "components": [ "Label" ],
+      "required": {
+          "every": [ "nesting", "id" ]
+      },
+      "allowChildren": false
+    }]
   },
   "parser": "babel-eslint"
 }
