solve webpack configuration problem

--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "author": "maaaashin324 <mstk.shin@gmail.com>",
   "license": "MIT",
   "scripts": {
-    "start": "webpack-dev-server --hot --inline"
+    "hack": "webpack && webpack-dev-server --hot --inline"
   },
   "devDependencies": {
     "babel-core": "^6.26.0",
