--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "author": "maaaashin324 <mstk.shin@gmail.com>",
   "license": "MIT",
   "scripts": {
-    "hack": "webpack && webpack-dev-server --hot --inline"
+    "hack": "webpack && webpack-dev-server --hot --inline --host 127.0.0.1 --port 8080"
   },
   "devDependencies": {
     "babel-core": "^6.26.0",
