--- a/.babelrc
+++ b/.babelrc
@@ -1,6 +1,7 @@
 {
   "presets": ["es2015", "react"],
   "plugins": [
-    "transform-class-properties"
+    "transform-class-properties",
+    "transform-es2015-destructuring"
   ]
 }
