--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "author": "maaaashin324 <mstk.shin@gmail.com>",
   "license": "MIT",
   "scripts": {
+    "start": "node server",
     "hack": "webpack && webpack-dev-server --hot --inline --host 127.0.0.1 --port 8080"
   },
   "devDependencies": {
@@ -36,8 +37,11 @@
     "webpack-dev-server": "^2.11.1"
   },
   "dependencies": {
+    "body-parser": "^1.18.2",
     "express": "^4.16.2",
     "lodash": "^4.17.5",
+    "moment": "^2.20.1",
+    "morgan": "^1.9.0",
     "prop-types": "^15.6.0",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
