--- a/.babelrc
+++ b/.babelrc
@@ -2,6 +2,7 @@
   "presets": ["es2015", "react"],
   "plugins": [
     "transform-class-properties",
-    "transform-es2015-destructuring"
+    "transform-es2015-destructuring",
+    "transform-object-rest-spread"
   ]
 }
