--- a/package.json
+++ b/package.json
@@ -13,17 +13,8 @@
     "heroku-postbuild": "webpack -p --config ./webpack.prod.config.js --progress && yarn seed"
   },
   "devDependencies": {
-    "babel-core": "^6.26.0",
     "babel-eslint": "^8.2.1",
     "babel-jest": "^22.2.2",
-    "babel-loader": "^7.1.2",
-    "babel-plugin-transform-async-to-generator": "^6.24.1",
-    "babel-plugin-transform-class-properties": "^6.24.1",
-    "babel-plugin-transform-es2015-destructuring": "^6.23.0",
-    "babel-plugin-transform-object-rest-spread": "^6.26.0",
-    "babel-preset-es2015": "^6.24.1",
-    "babel-preset-react": "^6.24.1",
-    "css-loader": "^0.28.9",
     "enzyme": "^3.3.0",
     "enzyme-adapter-react-16": "^1.1.1",
     "eslint": "^4.17.0",
@@ -32,18 +23,25 @@
     "eslint-plugin-jsx-a11y": "^6.0.3",
     "eslint-plugin-react": "^7.6.1",
     "jest": "^22.2.2",
-    "json-loader": "^0.5.7",
     "open-browser-webpack-plugin": "^0.0.5",
     "react-addons-test-utils": "^15.6.2",
     "sinon": "^4.3.0",
-    "style-loader": "^0.20.1",
-    "webpack": "^3.11.0",
     "webpack-dev-server": "^2.11.1"
   },
   "dependencies": {
+    "babel-core": "^6.26.0",
+    "babel-loader": "^7.1.2",
+    "babel-plugin-transform-async-to-generator": "^6.24.1",
+    "babel-plugin-transform-class-properties": "^6.24.1",
+    "babel-plugin-transform-es2015-destructuring": "^6.23.0",
+    "babel-plugin-transform-object-rest-spread": "^6.26.0",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
     "babel-polyfill": "^6.26.0",
     "body-parser": "^1.18.2",
+    "css-loader": "^0.28.9",
     "express": "^4.16.2",
+    "json-loader": "^0.5.7",
     "lodash": "^4.17.5",
     "moment": "^2.20.1",
     "morgan": "^1.9.0",
@@ -54,6 +52,12 @@
     "react-redux": "^5.0.6",
     "redis": "^2.8.0",
     "redux": "^3.7.2",
-    "redux-thunk": "^2.2.0"
+    "redux-thunk": "^2.2.0",
+    "style-loader": "^0.20.1",
+    "webpack": "^3.11.0"
+  },
+  "engines": {
+    "node": ">=9.3.0",
+    "yarn": ">=1.3.2"
   }
 }
